<resources>
    <string name="app_name">RESTful Client</string>
    <string name="login">Login...</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="actionlogin">Login</string>
    <string name="actionregister">Register</string>
    <string name="label_register">Register...</string>
    <string name="Register_username">Username</string>
    <string name="Button_register">Register</string>
    <string name="Regitser_confirm_password">Confirm Password</string>
    <string name="Register_password">Password</string>
    <string name="select_an_option">Select Option</string>
    <string name="add_vehicle">Assemble Vehicle</string>
    <string name="remove_vehicle">Remove Vehicle</string>
    <string name="update_vehicle">Modify Vehicle</string>
    <string name="list_vehicles">View All Vehicles</string>
    <string name="assemble_vehicle">Assemble Vehicle</string>
    <string name="modify_vehicle">Modify Vehicle</string>
    <string name="remove_vehicle_menu">Remove Vehicle</string>
    <string name="view_all_vehicles">View All Vehicles</string>
    <string name="select_option">Select Option</string>
    <string name="select_specifications">Select Specifications</string>
    <string name="fuel_type">Fuel Type:</string>
    <string name="diesel">Diesel</string>
    <string name="leaded">Leaded</string>
    <string name="unleaded">Unleaded</string>
    <string name="door_type">Door Type:</string>
    <string name="four_door">Four Door</string>
    <string name="next">Next</string>
    <string name="two_door">Two Door</string>
    <string name="no_door">No Door</string>
    <string name="confirm_sepecifications">Confirm Sepecifications</string>
    <string name="id">Id:</string>
    <string name="fuel_type_conf">Fuel type:</string>
    <string name="door_type_conf">Door type:</string>
    <string name="confirmAss">Confirm</string>
    <string name="select_vehicle_to_modify">Select Vehicle To Modify</string>
    <string name="selected">Selected:</string>
    <string name="id_mod">ID:</string>
    <string name="fuel_type_mod">Fuel Type:</string>
    <string name="door_type_mod">Door Type</string>
    <string name="modify">Modify</string>
    <string name="select_sefcification">Select Sefcification</string>
    <string name="select_fuel_type">Select Fuel Type:</string>
    <string name="unleaded_mod">UnLeaded</string>
    <string name="leaded_mod">Leaded</string>
    <string name="diesel_mod">Diesel</string>
    <string name="modify_mod">Modify</string>
    <string name="select_vehicle_to_remove">Select Vehicle To Remove</string>
    <string name="fuel_type_remove">Fuel Type:</string>
    <string name="door_type_remove">Door Type</string>
    <string name="remove_remove">Remove</string>
    <string name="assembled_vehicle">Assembled Vehicle</string>
    <string name="id_display_ass">Id:</string>
    <string name="fuel_type_display_ass">Fuel Type:</string>
    <string name="door_type_display_ass">Door Type:</string>
    <string name="modified_vehicle">Modified Vehicle</string>
    <string name="id_display_mod">Id:</string>
    <string name="fuel_type_display_mod">Fuel Type:</string>
    <string name="door_type_display_mod">Door Type:</string>
    <string name="home_display_mod">Home</string>
    <string name="removed_vehicle">Removed Vehicle</string>
    <string name="id_display_remove">Id:</string>
    <string name="fuel_type_display_remove">Fuel Type:</string>
    <string name="door_type_display_remove">Door Type:</string>
    <string name="home_display_remove">Home</string>
    <string name="confirm_removal">Confirm Removal</string>
    <string name="id_confirm_rem">Id:</string>
    <string name="fuel_type_confirm_rem">Fuel Type:</string>
    <string name="door_type_confirm_rem">Door Type:</string>
    <string name="remove_confirm_rem">Remove</string>
    <string name="home_display_all">Home</string>
</resources>
