<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_assemble_details"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.restful_client.restfulclient.AssembleDetailsActivity">

    <TextView
        android:text="@string/select_specifications"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="22dp"
        android:id="@+id/textView" />

    <TextView
        android:text="@string/fuel_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:layout_alignLeft="@+id/textView"
        android:layout_alignStart="@+id/textView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="36dp"
        android:id="@+id/textView2" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:id="@+id/radioGroup">

        <RadioButton
            android:text="@string/diesel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rbDiesel"
            android:layout_weight="1"
            android:onClick="selectEngine"/>

        <RadioButton
            android:text="@string/leaded"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rbLeaded"
            android:layout_weight="1"
            android:onClick="selectEngine"/>

        <RadioButton
            android:text="@string/unleaded"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rbUnleaded"
            android:layout_weight="1"
            android:onClick="selectEngine"/>
    </RadioGroup>

    <TextView
        android:text="@string/door_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView4"
        android:layout_centerVertical="true"
        android:layout_marginTop="35dp"
        android:layout_alignLeft="@+id/textView2"
        android:layout_alignStart="@+id/textView2"
        android:layout_below="@id/radioGroup" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView4"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp" >

        <RadioButton
            android:text="@string/four_door"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rbFour"
            android:layout_weight="1"
            android:onClick="selectDoor"/>

        <RadioButton
            android:text="@string/no_door"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rbNo"
            android:layout_weight="1"
            android:onClick="selectDoor"/>

        <RadioButton
            android:text="@string/two_door"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rbTwo"
            android:layout_weight="1"
            android:onClick="selectDoor"/>
    </RadioGroup>

    <Button
        android:text="@string/next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/btnAssembleNext"
        android:onClick="actionAssembleNext"/>
</RelativeLayout>
