<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_confirm_modify"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.restful_client.restfulclient.ConfirmModifyActivity">

    <TextView
        android:text="@string/select_sefcification"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="42dp"
        android:id="@+id/textView5"
        android:fontFamily="monospace"
        android:textSize="36sp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:text="@string/select_fuel_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:id="@+id/textView6"
        android:fontFamily="monospace"
        android:layout_below="@+id/textView5"
        android:layout_centerHorizontal="true" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView6"
        android:layout_marginTop="56dp"
        android:id="@+id/rbGroup"
        android:layout_centerHorizontal="true" >

        <RadioButton
            android:text="@string/unleaded_mod"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rbUnleadedMod"
            android:layout_weight="1"
            android:layout_centerHorizontal="true"
            android:onClick="selectEngine"/>

        <RadioButton
            android:text="@string/leaded_mod"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rbLeadedMod"
            android:layout_weight="1"
            android:layout_centerHorizontal="true"
            android:onClick="selectEngine"/>

        <RadioButton
            android:text="@string/diesel_mod"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rbDieselMod"
            android:layout_weight="1"
            android:layout_centerHorizontal="true"
            android:onClick="selectEngine"/>
    </RadioGroup>

    <Button
        android:text="@string/modify_mod"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="81dp"
        android:id="@+id/btnModifySelection"
        android:onClick="actionModifyConfirm"/>

</RelativeLayout>
