<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_menu"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.restful_client.restfulclient.MenuActivity">


    <Button
        android:text="@string/assemble_vehicle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lblSelectOption"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="36dp"
        android:id="@+id/btnAssemble"
        android:onClick="actionAssemble"/>

    <Button
        android:text="@string/modify_vehicle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnAssemble"
        android:layout_alignLeft="@+id/btnAssemble"
        android:layout_alignStart="@+id/btnAssemble"
        android:layout_marginTop="45dp"
        android:id="@+id/btnModify"
        android:onClick="actionModify"/>

    <Button
        android:text="@string/remove_vehicle_menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnModify"
        android:layout_alignRight="@+id/btnModify"
        android:layout_alignEnd="@+id/btnModify"
        android:layout_marginTop="47dp"
        android:id="@+id/btnRemove"
        android:onClick="actionRemove"/>

    <Button
        android:text="@string/view_all_vehicles"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnRemove"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="52dp"
        android:id="@+id/btnViewVehicles"
        android:onClick="actionViewAll"/>

    <TextView
        android:text="@string/select_option"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="17dp"
        android:id="@+id/lblSelectOption"
        android:fontFamily="monospace"
        android:textSize="36sp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        />
</RelativeLayout>
