<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_register"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.restful_client.restfulclient.RegisterActivity">

    <TextView
        android:text="@string/label_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="29dp"
        android:id="@+id/lblRegister"
        android:textSize="36sp"
        android:fontFamily="monospace"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:layout_marginTop="44dp"
        android:id="@+id/txtUsernameReg"
        android:hint="@string/Register_username"
        android:layout_below="@+id/lblRegister"
        android:layout_centerHorizontal="true" />

    <Button
        android:text="@string/Button_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="59dp"
        android:id="@+id/btnRegister"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:onClick="actionCreateUser"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:layout_marginTop="43dp"
        android:id="@+id/txtPasswordRegConfirm"
        android:hint="@string/Regitser_confirm_password"
        android:layout_below="@+id/txtPasswordReg"
        android:layout_alignLeft="@+id/txtPasswordReg"
        android:layout_alignStart="@+id/txtPasswordReg" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:layout_marginTop="35dp"
        android:id="@+id/txtPasswordReg"
        android:hint="@string/Register_password"
        android:layout_below="@+id/txtUsernameReg"
        android:layout_alignLeft="@+id/txtUsernameReg"
        android:layout_alignStart="@+id/txtUsernameReg" />

</RelativeLayout>
