<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_vehicle_modify"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.restful_client.restfulclient.VehicleModifyActivity">

    <TextView
        android:text="@string/select_vehicle_to_modify"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="23dp"
        android:id="@+id/textView3"
        android:fontFamily="monospace"
        android:textSize="24sp" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="61dp"
        android:id="@+id/modifySelection"
        android:layout_below="@+id/textView3"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/selected"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/modifySelection"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="66dp"
        android:id="@+id/lblSelected"
        android:textSize="18sp"
        android:fontFamily="monospace" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lblSelected"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="49dp"
        android:id="@+id/tbModify">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="60dp">

            <TextView
                android:text="@string/id_mod"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView7" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/lblIdMod" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="60dp">

            <TextView
                android:text="@string/fuel_type_mod"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView11" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/lblFuelMod" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="60dp">

            <TextView
                android:text="@string/door_type_mod"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView13" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/lblDoorMod" />
        </TableRow>

    </TableLayout>

    <Button
        android:text="@string/modify"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="12dp"
        android:id="@+id/btnModify"
        android:onClick="actionModifyVehicle"/>

</RelativeLayout>
