<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_confirm_remove"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.restful_client.restfulclient.ConfirmRemoveActivity">

    <TextView
        android:text="@string/confirm_removal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="29dp"
        android:id="@+id/textView22"
        android:fontFamily="monospace"
        android:textSize="36sp" />

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView22"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="45dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:text="@string/id_confirm_rem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView28" />

            <TextView
                android:text=""
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/lblIdRemoval" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:text="@string/fuel_type_confirm_rem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView31" />

            <TextView
                android:text=""
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/lblFuelRemoval" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:text="@string/door_type_confirm_rem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView33" />

            <TextView
                android:text=""
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/lblDoorRemoval" />
        </TableRow>

    </TableLayout>

    <Button
        android:text="@string/remove_confirm_rem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="39dp"
        android:id="@+id/btnRemoval"
        android:onClick="avtionRemoval"/>
</RelativeLayout>
